# kurs_saharova

./: CMakeLists.txt  README.md  asdhajd.cpp  firmware  node.cpp  pini.md
cmake/: oocd_flash_script.cmake
ring_buffer/: Ring_buf.cpp  Ring_buf.hpp  ring_buf.cpp
src/: main.cpp
svd/: stm32f303.svd  stm32f407.svd
